Fix logo size and alignment and allow text as logo (#50)

--- a/packages/terra-consumer-nav/src/components/nav-logo/NavLogo.scss
+++ b/packages/terra-consumer-nav/src/components/nav-logo/NavLogo.scss
@@ -6,15 +6,17 @@
     max-height: 170px;
     max-width: calc(100% - 50px});
     overflow: hidden;
-
+    text-align: center;
     @media screen and (max-width: $terra-medium-breakpoint) {
       margin: 40px 25px;
     }
   }
 
   .img {
-    color: #3d3d3d;
-    display: block;
+    color: var(--terra-consumer-logo-text-color, #3d3d3d);
+    display: inline-block;
+    font-size: 30px;
+    font-weight: normal;
     margin: auto;
     max-height: 120px;
     max-width: 100%;
